# BrainGenix-ERS

./: .gitignore  .gitlab-ci.yml  .gitmodules  BrainGenix-ERS.code-workspace  Build.sh  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Compile-Shaders.sh  Debug.sh  GatherPrerequisites.sh  GetRequirements.sh  Install.sh  README.md  dumb.py  vcpkg-configuration.json  vcpkg.json
OpenGL/: Build.sh  CMakeCache.txt  CMakeLists.txt  Makefile  Toolchain-Windows.cmake  cmake_install.cmake
OpenGL/Libraries/assimp/: Makefile  assimp.pc  assimpTargets-release.cmake  cmake_install.cmake  revision.h
OpenGL/Libraries/assimp/code/: Makefile  cmake_install.cmake
OpenGL/Libraries/assimp/contrib/: Makefile  cmake_install.cmake
OpenGL/Libraries/assimp/test/: Makefile  cmake_install.cmake
OpenGL/Libraries/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
OpenGL/Libraries/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
OpenGL/Libraries/glfw/src/: Makefile  cmake_install.cmake
OpenGL/Libraries/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
OpenGL/Libraries/yaml-cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
OpenGL/Libraries/yaml-cpp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenGL/Libraries/yaml-cpp/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  read
OpenGL/Source/: Config.yaml  Main.cpp
OpenGL/Source/Core/AssetLoader/: Mesh.h  MeshImporterModule.cpp  MeshImporterModule.h  Model.h  ModelLoader.cpp  TextureLoaderModule.cpp
OpenGL/Source/Include/glad/: glad.h
OpenGL/Source/Shaders/: 3.3.shader.fs  3.3.shader.vs  Model.fs  Model.vs  colors.fs  colors.vs  light_cube.fs  light_cube.vs  shader-lighting.fs  shader.fs  shader.vs
Sandbox/CubeMapTest/Source/learnopengl/: CMakeLists.txt  model.h
Sandbox/LuaJIT/src/: CMakeLists.txt  Run.sh  main.cpp  test.lua
Sandbox/NewIOSystem/: CMakeLists.txt
Sandbox/NewIOSystem/CMake/Utils/: ColorizeMessages.cmake  DisableTargetWarnings.cmake  SetBinaryDir.cmake
Sandbox/NewIOSystem/Tools/: Build.sh  Clean.sh  Install.sh  Run.sh
Sandbox/Superbuild/: CMakeLists.txt
Sandbox/Superbuild/Tools/: Build-CMake.sh  Build.sh
Sandbox/Superbuild2/: Assimp.cmake  BGImageTest.cmake  CMakeLists.txt  FreeImage.cmake  SuperbuildMain.cmake
Sandbox/Superbuild2/Source/: CMakeLists.txt
Sandbox_Testing/: .gitignore  Build.sh  CMakeLists.txt
Sandbox_Testing/Source/: Main.cpp
Sandbox_Testing/Source/Core/Management/: LoggingSystem.h
Sandbox_Testing/Source/Core/Renderer/: Renderer.cpp  Renderer.h
Sandbox_Testing/Source/Shaders/: Main.frag  Main.vert
Source/Core/Editor/Visual/: CMakeLists.txt
Source/Core/Editor/VisualEditor/: CMakeLists.txt  GUI.cpp  GUI.h  Grid.cpp  Grid.h
Source/Core/Editor/Widgets/: CMakeLists.txt  GUI_Widget_FrameLatencyGraph.cpp  GUI_Widget_FrameLatencyGraph.h  GUI_Widget_FramerateCounter.cpp  GUI_Widget_FramerateCounter.h  GUI_Widget_FramerateGraph.cpp  GUI_Widget_FramerateGraph.h  GUI_Widget_FramerateHistogram.cpp  GUI_Widget_FramerateHistogram.h  GUI_Widget_FrameratePlot.cpp  GUI_Widget_FrameratePlot.h  GUI_Widget_ObjectProperties.cpp  GUI_Widget_ObjectProperties.h  GUI_Widget_RAMGraph.cpp  GUI_Widget_RAMGraph.h  GUI_Widget_RenderingSettings.cpp  GUI_Widget_RenderingSettings.h
Source/Core/Editor/Windows/: CMakeLists.txt  GUI_Window_RenderingSettings.cpp  README.md
Source/Core/InputOutputManagers/ERS_AssetIndexIOM/: CMakeLists.txt  ERS_CLASS_AssetIndexIOM.cpp  ERS_CLASS_AssetIndexIOM.h
Source/Core/Loader/: AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt
Source/Core/Loader/BGAsset/: BGAssetLoader.cpp  BGAssetLoader.h  BGAssetManager.cpp  BGAssetManager.h  CMakeLists.txt
Source/Core/Loader/Configuration/: CMakeLists.txt  ConfigurationLoader.cpp  ConfigurationLoader.h
Source/Core/Loader/Decoder/: FileIO.cpp  FileIO.h
Source/Core/Loader/ERS_AssetIndex/: CMakeLists.txt  ERS_CLASS_AssetIndex.h
Source/Core/Loader/ERS_AssetIndexLoader/: ERS_CLASS_AssetIndexLoader.h
Source/Core/Loader/ERS_ControllerSettingsLoader/: CMakeLists.txt  ControllerSettingsLoader.cpp  ControllerSettingsLoader.h  ERS_ControllerSettingsLoader.h  (+1 more)
Source/Core/Renderer/: CMakeLists.txt  MainRenderingSystem.cpp  MainRenderingSystem.h  Renderer.cpp  Renderer.h  RendererManager.cpp  RendererManager.h
Source/Internal/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h  ArgumentParserTest.cpp  ArgumentParserTest.h  CMakeLists.txt  ERS_ArgumentParser.cpp  ERS_ArgumentParser.h
Source/Internal/GPURequest/: CMakeLists.txt  GPURequest.cpp
Source/Internal/GetExecutablePath/: CMakeLists.txt  ERS_GetExecutablePath.cpp  ERS_GetExecutablePath.h  ERS_LocalConfigLoader.cpp  GetExecutablePath.cpp  README.md
Source/Internal/InputOutputSubsystem/: AssetIndexInputOutputManager.cpp  AssetIndexInputOutputManager.h  CMakeLists.txt  CompareAssetIndexDelta.cpp  CompareAssetIndexDelta.h  ERS_InputOutputSubsystem.cpp  ERS_InputOutputSubsystem.h  InputOutputSubsystem.cpp  InputOutputSubsystem.h
Source/Internal/LocalConfigLoader/: CMakeLists.txt  ERS_LocalConfigLoader.cpp  ERS_LocalConfigLoader.h  LocalConfigLoader.cpp  LocalConfigLoader.h  README.md
Source/Internal/LoggingSystem/: CMakeLists.txt  ERS_CLASS_OpenGLLoggingSystem.h  ERS_LogSystemInfo.cpp  ERS_LogSystemInfo.h  ERS_LoggingSystem.cpp  ERS_LoggingSystem.h  ERS_MessageCallbackUserParam.cpp  ERS_OpenGLLoggingSystem.cpp  ERS_OpenGLLoggingSystem.h  LogSystemInfo.cpp  LogSystemInfo.h  LoggingSystem.cpp  LoggingSystem.h
Source/Internal/ModelImporter/: CMakeLists.txt  ERS_ModelImporter.cpp  ERS_ModelImporter.h  ModelImporter.cpp  ModelImporter.h
Source/Internal/OpenGLLoggingSystem/: CMakeLists.txt  ERS_OpenGLLoggingSystem.h  MessageCallbackUserParam.cpp  OpenGLLogItem.cpp  OpenGLLoggingSystem.cpp  OpenGLLoggingSystem.h
(+1481 files in other folders)
